# mortgage-matrix

./: .gitignore  .pre-commit-config.yaml  README.md  TESTING.ipynb  pyproject.toml
mortgage_matrix/: mortgage.py  plots.ipynb
tests/: test_mortgage.py
